<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinator_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg1"
    tools:context=".ui.login.LoginActivity">

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_vertical_margin"
            android:background="@drawable/register_box"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="20dp"
                android:text="@string/user_name"
                android:textColor="#000000" />

            <AutoCompleteTextView
                android:id="@+id/etUserName"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="30dp"
                android:background="@drawable/input_bg"
                android:gravity="center"
                android:imeActionLabel="@string/next"
                android:imeOptions="actionUnspecified"
                android:hint="@string/etUserName"
                android:inputType="textPersonName"
                android:maxLines="1"
                android:singleLine="true"
                android:textSize="13dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="8dp"
                android:text="@string/email"
                android:textColor="#000000" />

            <AutoCompleteTextView
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="30dp"
                android:background="@drawable/input_bg"
                android:gravity="center"
                android:imeActionLabel="@string/next"
                android:imeOptions="actionUnspecified"                android:hint="@string/etEmail"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true"
                android:textSize="13dp" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="8dp"
                android:text="@string/phone"
                android:textColor="#000000" />

            <EditText
                android:id="@+id/etPhone"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="30dp"
                android:background="@drawable/input_bg"
                android:gravity="center"
                android:hint="@string/etPhone"
                android:imeActionId="6"
                android:imeActionLabel="@string/next"
                android:imeOptions="actionUnspecified"
                android:inputType="phone"
                android:maxLines="1"
                android:singleLine="true"
                android:textSize="13dp" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="8dp"
                android:text="@string/password"
                android:textColor="#000000" />

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="30dp"
                android:background="@drawable/input_bg"
                android:gravity="center"
                android:hint="@string/etPassword"
                android:imeActionId="6"
                android:imeActionLabel="@string/next"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"
                android:textSize="13dp" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="8dp"
                android:text="@string/re_password"
                android:textColor="#000000" />

            <EditText
                android:id="@+id/etRePassword"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="30dp"
                android:background="@drawable/input_bg"
                android:gravity="center"
                android:hint="@string/rePassword"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"
                android:textSize="13dp" />



            <Button
                android:id="@+id/btnRegister"
                style="?android:textAppearanceSmall"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:fontFamily="monospace"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/btn_red"
                android:text="@string/register_btn"
                android:textColor="#ffff" />

        </LinearLayout>
    </ScrollView>

    <ImageButton
        android:id="@+id/iBntBackRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/ic_back_purple"
        android:scaleType="matrix"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.011" />
</android.support.constraint.ConstraintLayout>
