<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/err_msg"
        android:layout_width="match_parent"
        android:gravity="center"
        android:textColor="@drawable/err_msg"
        android:text="@string/err"
        android:paddingLeft="@dimen/padding_update_content_left"
        android:paddingTop="@dimen/padding_top_err_network"
        android:paddingRight="@dimen/padding_update_content_right"
        android:paddingBottom="@dimen/padding_update_content_top_bot"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/msg"
        android:layout_width="match_parent"
        android:gravity="center"
        android:text="@string/err_content_1"
        android:paddingLeft="@dimen/padding_update_content_left"
        android:paddingTop="@dimen/padding_top_err_network"
        android:paddingRight="@dimen/padding_update_content_right"
        android:paddingBottom="@dimen/padding_update_content_top_bot"
        android:layout_height="wrap_content" />
    <View
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/colorLine"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>
    <TextView
        android:id="@+id/bntError"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textStyle="bold"
        android:padding="@dimen/padding_update_content"
        android:text="@string/ok_mgs"
        android:textSize="16dp" />
</LinearLayout>